# projetaoSI-22.1-pythonback

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
app/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_imageurl_url.py  0003_alter_imageurl_url.py
app/models/: image_detail.py  image_url.py
app/service/: request_duck_duck.py
config/: .env-example.txt  settings.py  urls.py
docker/: Dockerfile
mail/: forms.py  urls.py  views.py
mail/service/: mail.py
staticfiles/: staticfiles.json
templates/template_email/: template_mercado.html  template_usuario.html
